# pdf-decryptor

./: .gitignore  Dockerfile  Makefile  Procfile  README.md  cloudbuild.yaml  docker-compose.yml  gcloud_container_cleanup.sh  package.json  pyproject.toml
.github/workflows/: stage.yml
pdf_decryptor/api/decrypt/: api.py
pdf_decryptor/api/main/: api.py
pdf_decryptor/api/main/templates/: main.html
pdf_decryptor/lib/: pdf.py  qpdf.py  save_pdf.py
pdf_decryptor/server/: blueprints.py  config.py  factory.py
pdf_decryptor/server/base_templates/: base.html
pdf_decryptor/server/static/: style.css
tests/: __init__.py
tests/api/decrypt/: api_test.py
tests/api/main/: api_test.py
tests/lib/: pdf_test.py  qpdf_test.py  save_pdf_test.py
